--- a/shared/src/main/translations/ar.yaml
+++ b/shared/src/main/translations/ar.yaml
@@ -2,6 +2,7 @@ language_code: ar
 language_name: العربية
 settings_language_title: اللغة
 settings_language_summary: غيّر لغة التطبيق
+settings_language_label_incomplete: "{language_native_name} (غير مكتمل)"
 language_system_default: النظام
 settings_theme: الثيم
 theme_light: فاتح
