--- a/shared/src/main/translations/gl.yaml
+++ b/shared/src/main/translations/gl.yaml
@@ -2,6 +2,7 @@ language_code: gl
 language_name: Galego
 settings_language_title: Linguaxe
 settings_language_summary: Cambia o idioma da aplicación
+settings_language_label_incomplete: "{language_native_name} (incompleto)"
 language_system_default: Sistema
 settings_theme: Tema
 theme_light: Claro
