--- a/shared/src/main/translations/eu.yaml
+++ b/shared/src/main/translations/eu.yaml
@@ -4,6 +4,8 @@ settings_language_title: Hizkuntza
 settings_language_summary: Aplikazioaren hizkuntza aldatzeko
 settings_language_label_incomplete: "{language_native_name} (osoa ez dago)"
 language_system_default: Sistema lehenetsia
+settings_translate_title: Joan Weblate-ra
+settings_translate_summary: Lagundu zure hizkuntza itzultzen
 settings_theme: Gaia
 theme_light: Argia
 theme_dark: Iluna
