🌐 FR considered a full translation

--- a/app/src/main/translations/fr.yaml
+++ b/app/src/main/translations/fr.yaml
@@ -59,7 +59,7 @@ product_name_diesel_renovable: Gazole renouvelable (HVO)
 product_name_gasolina_95_e10: Essence SP95-E10
 product_name_gasolina_95_e25: Essence SP95-E25
 product_name_gasolina_95_e5: Essence SP95-E5
-product_name_gasolina_95_e5_premium: Essence SP95-E5 Premium
+product_name_gasolina_95_e5_premium: Essence SP95-E5 premium
 product_name_gasolina_95_e85: Superéthanol E85
 product_name_gasolina_98_e10: Essence SP98-E10
 product_name_gasolina_98_e5: Essence SP98-E5
